[gd_scene load_steps=4 format=2]

[ext_resource path="res://Narrator.gd" type="Script" id=1]
[ext_resource path="res://SelectMenu.gd" type="Script" id=2]
[ext_resource path="res://DialogBox.gd" type="Script" id=3]

[node name="DialogBox" type="PanelContainer"]
anchor_top = 0.74
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogMargin" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DialogMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1002.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Narrator" type="Label" parent="DialogMargin/VBoxContainer"]
margin_right = 994.0
margin_bottom = 14.0
size_flags_vertical = 1
autowrap = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="DialogMargin/VBoxContainer/Narrator"]

[node name="Timer" type="Timer" parent="DialogMargin/VBoxContainer/Narrator"]
one_shot = true

[node name="SelectMenu" type="ItemList" parent="DialogMargin/VBoxContainer"]
visible = false
margin_top = 18.0
margin_right = 994.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DialogMargin/VBoxContainer/Narrator/Timer" to="DialogMargin/VBoxContainer/Narrator" method="_on_Timer_timeout"]
